resources/image-builder/production/worker/image-builder-worker.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: image-builder-worker
  name: image-builder-worker-route
spec:
  host: jdtctdnzh7wn6j7.api.openshift.com
  port:
    targetPort: worker-api
  to:
    kind: Service
    name: image-builder-worker
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
